# Clipzy_Clip

./: .gitignore  LICENSE  README.md  RELEASING.md  context.md  index.html  package.json  plan.md  tsconfig.json
scripts/: release-build.mjs  release-preflight.mjs  sync-sidecars.mjs
src/: App.tsx  ClipForm.tsx  clipzy-ui.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.mac.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  local_jobs.rs  main.rs
src/lib/: api.test.ts  api.ts  auth-state.ts  job-notifications.ts  local-job-contract.test.ts  store.test.ts  store.ts
